# prj012-cpp-practice

./: .gitignore  .gitmodules  CMakeLists.txt  Clean.bat  GenerateProject.bat  Make.bat  README.md  Run.bat
Source/: Application.cpp  Application.h  Config.h  MathDefines.h  Renderer.cpp  Renderer.h  RendererDecl.h  Stats.cpp  Stats.h  Window.cpp  Window.h  main.cpp
Source/Core/: Format.h  Logger.cpp  Logger.h  PlatformContext.h  Time.cpp  Time.h  Utility.cpp  Utility.h
